@@ -40,7 +40,7 @@ class JasperConnection {
 		if (this.db_type == MYSQLCONNECTION) {
 
 			try {
-				Class.forName("com.mysql.jdbc.Driver").newInstance();
+				Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
 			} catch (Exception ex) {
 
 //				System.err.println("Unable to load MySQL driver: "
@@ -64,7 +64,7 @@ class JasperConnection {
 		} else if (this.db_type == POSTGRESQLCONNECTION) { // postgresql
 
 			try {
-				Class.forName("org.postgresql.Driver").newInstance();
+				Class.forName("org.postgresql.Driver").getDeclaredConstructor().newInstance();
 			} catch (Exception ex) {
 
 //				System.err.println("Unable to load PostgreSQL driver: "
